# SenJr

./: .gitignore  ROADMAP_V3.md  argv.json  build_error.txt  build_error_utf8.txt  build_output.txt  build_output_utf8.txt  deploy_error.txt  deploy_error_utf8.txt  final_build_utf8.txt  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  status_output.txt  supabase-schema.sql  tsc_output.txt  tsc_output_utf8.txt  untracked.txt
aris/: index.html  package-lock.json  package.json  server.js  tailwind.config.js  vite.config.js
aris/src/: App.jsx  index.css  useArisVision.js
extensions/: .obsolete  extensions.json
extensions/devsense.composer-php-vscode-1.69.18673-universal/: .vsixmanifest  package.json
extensions/devsense.intelli-php-vscode-0.12.17700-win32-x64/: .vsixmanifest  build.vscode.json  package.json  readme.md
extensions/devsense.phptools-vscode-1.69.18673-win32-x64/: .vscodeignore.tmp  .vsixmanifest  build.vscode.json  changelog-preview.md  changelog.md  package.json  package.nls.en.json  (+2 more)
extensions/ms-python.vscode-python-envs-1.20.1-universal/analysis/: __init__.py  complexity_analysis.py  debt_indicators.py  dependency_analysis.py  file_discovery.py  git_analysis.py  pyproject.toml  snapshot.py
gestalt/: fix.cjs  index.html  package-lock.json  package.json
mission-control/: disable_protection.ps1  fields.json  inspect_project.ps1  list_fields.ps1  next.config.ts  package-lock.json  package.json  patch_data.json  patch_data_v2.json  project_details.json  run_patch.bat  test_public_access.bat
src/: middleware.ts
(+299 files in other folders)
