[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "analysis"
version = "0.1.0"
description = "Code health and technical debt analysis tools"
requires-python = ">=3.9"
dependencies = [
    "radon>=6.0.0",
    "pathspec>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
